package com.ammarbhatkar.SPay.merchant.entity;

public class MerchantQr {
}

